2009-06-17  Mike Kestner <mkestner@novell.com>

	* AllocationsStore.cs: Allocations subclass of the new ProfileStore.
	* AllocationsView.cs: new Allocations tree view.
	* CallsStore.cs: refactor as ProfileStore subclass with CallsNode
	subclass.
	* Node.cs: super class for Calls and Allocations tree nodes.
	* ProfileStore.cs: super class for Calls and Allocations stores.

2009-06-12  Massimiliano Mantione <massi@ximian.com>
	* CallsStore.cs: Get the root frames from the event handler now.

2009-06-11  Mike Kestner <mkestner@novell.com>

	* CallsStore.cs: add license.
	* CallsView.cs: new internal treeview subclass for calls data.
	* ProfileView.cs: new scrolled window class to load profile logs and
	manage different profile view types.

2009-06-09  Mike Kestner <mkestner@novell.com>

	* CallsStore.cs: use StackTrace objects to navigate the call tree
	and obtain context appropriate clicks info.  Fix a bug in the GetIter
	path traversal logic for trees deeper than 2 levels.

2009-05-21  Mike Kestner <mkestner@novell.com>

	* *: initial checkin.  beginnings of a widget library for profiler
	output display and navigation.
